--- a/index.html
+++ b/index.html
@@ -20,17 +20,18 @@
     <!---------- Header Section ---------->
     <header class="header-section pt-4">
         <!------ Navbar ------>
-
         <nav class="navbar navbar-expand-lg navbar-light text-white bg-transparent">
             <div class="container">
-                <a class="navbar-brand" href="#">Navbar</a>
+                <a class="navbar-brand" href="#">
+                    <img src="./assets/images/logo.png" alt="">
+                </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-light navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                         <li class="nav-item">
                             <a class="nav-link" aria-current="page" href="#">Support</a>
                         </li>
@@ -94,6 +95,57 @@
                 </div>
             </div>
         </nav>
+
+        <!------ Sider ------>
+        <div class="container slider-section">
+            <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel" data-interval="2000">
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <div class="row">
+                            <div class="col-md-7 py-4">
+                                <h1 class="text-white pb-2">Lorem ipsum dolor sit amet, consectetur?</h1>
+                                <p class="text-white fs-6">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                    Distinctio mollitia iure id corporis ad quis sed provident quibusdam hic. Voluptates
+                                    facilis natus cum magni aliquid deleniti est enim consequatur odit!</p>
+                                <button class="btn btn-danger px-5 rounded-pill py-2 mt-2">Enroll Now</button>
+                            </div>
+                            <div class="col-md-5">
+                                <img src="./assets/images/s1.png" class="d-block img-fluid" alt="...">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="row">
+                            <div class="col-md-7 py-4">
+                                <h1 class="text-white pb-2">Lorem ipsum dolor sit amet, consectetur?</h1>
+                                <p class="text-white fs-6">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                    Distinctio mollitia iure id corporis ad quis sed provident quibusdam hic. Voluptates
+                                    facilis natus cum magni aliquid deleniti est enim consequatur odit!</p>
+                                <button class="btn btn-danger px-5 rounded-pill py-2 mt-2">Enroll Now</button>
+                            </div>
+                            <div class="col-md-5">
+                                <img src="./assets/images/s2.png" class="d-block img-fluid" alt="...">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="row">
+                            <div class="col-md-7 py-4">
+                                <h1 class="text-white pb-2">Lorem ipsum dolor sit amet, consectetur?</h1>
+                                <p class="text-white fs-6">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                    Distinctio mollitia iure id corporis ad quis sed provident quibusdam hic.
+                                    Voluptates facilis natus cum magni aliquid deleniti est enim consequatur odit!
+                                </p>
+                                <button class="btn btn-danger px-5 rounded-pill py-2 mt-2">Enroll Now</button>
+                            </div>
+                            <div class="col-md-5">
+                                <img src="./assets/images/s3.png" class="d-block img-fluid" alt="...">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </header>
 
 
