--- a/index.html
+++ b/index.html
@@ -104,10 +104,10 @@
                         <div class="row">
                             <div class="col-md-7 py-4">
                                 <h1 class="text-white pb-2">Lorem ipsum dolor sit amet, consectetur?</h1>
-                                <p class="text-white fs-6">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                <p class="text-white fs-6 mt-4">Lorem ipsum dolor sit amet consectetur adipisicing elit.
                                     Distinctio mollitia iure id corporis ad quis sed provident quibusdam hic. Voluptates
                                     facilis natus cum magni aliquid deleniti est enim consequatur odit!</p>
-                                <button class="btn btn-danger px-5 rounded-pill py-2 mt-2">Enroll Now</button>
+                                <button class="btn btn-danger px-5 rounded-pill py-2 mt-4">Enroll Now</button>
                             </div>
                             <div class="col-md-5">
                                 <img src="./assets/images/s1.png" class="d-block img-fluid" alt="...">
@@ -118,10 +118,10 @@
                         <div class="row">
                             <div class="col-md-7 py-4">
                                 <h1 class="text-white pb-2">Lorem ipsum dolor sit amet, consectetur?</h1>
-                                <p class="text-white fs-6">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                <p class="text-white fs-6 mt-4">Lorem ipsum dolor sit amet consectetur adipisicing elit.
                                     Distinctio mollitia iure id corporis ad quis sed provident quibusdam hic. Voluptates
                                     facilis natus cum magni aliquid deleniti est enim consequatur odit!</p>
-                                <button class="btn btn-danger px-5 rounded-pill py-2 mt-2">Enroll Now</button>
+                                <button class="btn btn-danger px-5 rounded-pill py-2 mt-4">Enroll Now</button>
                             </div>
                             <div class="col-md-5">
                                 <img src="./assets/images/s2.png" class="d-block img-fluid" alt="...">
@@ -131,12 +131,12 @@
                     <div class="carousel-item">
                         <div class="row">
                             <div class="col-md-7 py-4">
-                                <h1 class="text-white pb-2">Lorem ipsum dolor sit amet, consectetur?</h1>
+                                <h1 class="text-white pb-2 mt-4">Lorem ipsum dolor sit amet, consectetur?</h1>
                                 <p class="text-white fs-6">Lorem ipsum dolor sit amet consectetur adipisicing elit.
                                     Distinctio mollitia iure id corporis ad quis sed provident quibusdam hic.
                                     Voluptates facilis natus cum magni aliquid deleniti est enim consequatur odit!
                                 </p>
-                                <button class="btn btn-danger px-5 rounded-pill py-2 mt-2">Enroll Now</button>
+                                <button class="btn btn-danger px-5 rounded-pill py-2 mt-4">Enroll Now</button>
                             </div>
                             <div class="col-md-5">
                                 <img src="./assets/images/s3.png" class="d-block img-fluid" alt="...">
