--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
+    <!---------- Font awesome CSS ---------->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/fontawesome.min.css">
     <!---------- Custom CSS ---------->
     <link rel="stylesheet" href="./assets/css/style.css">
     <title>Programming Hero </title>
@@ -98,15 +100,24 @@
 
         <!------ Sider ------>
         <div class="container slider-section">
-            <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel" data-interval="2000">
+            <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel"
+                data-interval="2000">
+                <div class="carousel-indicators">
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
+                        class="active" aria-current="true" aria-label="Slide 1"></button>
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+                        aria-label="Slide 2"></button>
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+                        aria-label="Slide 3"></button>
+                </div>
                 <div class="carousel-inner">
                     <div class="carousel-item active">
                         <div class="row">
-                            <div class="col-md-7 py-4">
+                            <div class="col-md-7 py-md-4 mb-5 mb-md-0 text-center text-md-start">
                                 <h1 class="text-white pb-2">Lorem ipsum dolor sit amet, consectetur?</h1>
-                                <p class="text-white fs-6 mt-4">Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                                    Distinctio mollitia iure id corporis ad quis sed provident quibusdam hic. Voluptates
-                                    facilis natus cum magni aliquid deleniti est enim consequatur odit!</p>
+                                <p class="text-white fs-6 mt-4">কোর্সের অংশ হিসেবে হাতে কলমে নতুন এগারোটা প্রজেক্ট
+                                    (এসাইনমেন্ট) করবে তুমি। আমরা তোমার প্রজেক্ট এর ফিডব্যাক দিবো। মার্কস দিবো। যাতে
+                                    প্রফেশনাল ওয়েবসাইট বানিয়েই চাকরির ইন্টারভিউতে যেতে পারো।</p>
                                 <button class="btn btn-danger px-5 rounded-pill py-2 mt-4">Enroll Now</button>
                             </div>
                             <div class="col-md-5">
@@ -116,11 +127,11 @@
                     </div>
                     <div class="carousel-item">
                         <div class="row">
-                            <div class="col-md-7 py-4">
+                            <div class="col-md-7 py-md-4 mb-5 mb-md-0 text-center text-md-start">
                                 <h1 class="text-white pb-2">Lorem ipsum dolor sit amet, consectetur?</h1>
-                                <p class="text-white fs-6 mt-4">Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                                    Distinctio mollitia iure id corporis ad quis sed provident quibusdam hic. Voluptates
-                                    facilis natus cum magni aliquid deleniti est enim consequatur odit!</p>
+                                <p class="text-white fs-6 mt-4">কোর্সের অংশ হিসেবে হাতে কলমে নতুন এগারোটা প্রজেক্ট
+                                    (এসাইনমেন্ট) করবে তুমি। আমরা তোমার প্রজেক্ট এর ফিডব্যাক দিবো। মার্কস দিবো। যাতে
+                                    প্রফেশনাল ওয়েবসাইট বানিয়েই চাকরির ইন্টারভিউতে যেতে পারো।</p>
                                 <button class="btn btn-danger px-5 rounded-pill py-2 mt-4">Enroll Now</button>
                             </div>
                             <div class="col-md-5">
@@ -130,12 +141,11 @@
                     </div>
                     <div class="carousel-item">
                         <div class="row">
-                            <div class="col-md-7 py-4">
-                                <h1 class="text-white pb-2 mt-4">Lorem ipsum dolor sit amet, consectetur?</h1>
-                                <p class="text-white fs-6">Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                                    Distinctio mollitia iure id corporis ad quis sed provident quibusdam hic.
-                                    Voluptates facilis natus cum magni aliquid deleniti est enim consequatur odit!
-                                </p>
+                            <div class="col-md-7 py-md-4 mb-5 mb-md-0 text-center text-md-start">
+                                <h1 class="text-white pb-2">Lorem ipsum dolor sit amet, consectetur?</h1>
+                                <p class="text-white fs-6 mt-4">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                    Distinctio mollitia iure id corporis ad quis sed provident quibusdam hic. Voluptates
+                                    facilis natus cum magni aliquid deleniti est enim consequatur odit!</p>
                                 <button class="btn btn-danger px-5 rounded-pill py-2 mt-4">Enroll Now</button>
                             </div>
                             <div class="col-md-5">
@@ -148,7 +158,81 @@
         </div>
     </header>
 
+    <!---------- Main section ---------->
+    <main class="container mb-5">
+        <!------Next Batch ------>
+        <div class="row">
+            <div class="card shadow rounded-3 nxt-batch col-md-10 offset-md-1 bg-white border-0">
+                <div class="card-body mb-2">
+                    <h2 class="text-center py-5 fw-bold">পরবর্তী ব্যাচের সময় সূচি</h2>
+                    <div class="row mb-2">
+                        <div class="col-md-6">
+                            <h6 class="fw-bold">
+                                <p class="bg-primary">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="white"
+                                        class="bi bi-calendar-event" viewBox="0 0 16 16">
+                                        <path
+                                            d="M11 6.5a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5v-1z" />
+                                        <path
+                                            d="M3.5 0a.5.5 0 0 1 .5.5V1h8V.5a.5.5 0 0 1 1 0V1h1a2 2 0 0 1 2 2v11a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V3a2 2 0 0 1 2-2h1V.5a.5.5 0 0 1 .5-.5zM1 4v10a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V4H1z" />
+                                    </svg>
+                                </p>
+                                এনরোলমেন্ট শুরু: জুন ১০, ২০২২ (শুক্রবার)
+                            </h6>
+                        </div>
+                        <div class="col-md-6">
+                            <h6 class="fw-bold">
+                                <p class="bg-success">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="white"
+                                        class="bi bi-bell" viewBox="0 0 16 16">
+                                        <path
+                                            d="M8 16a2 2 0 0 0 2-2H6a2 2 0 0 0 2 2zM8 1.918l-.797.161A4.002 4.002 0 0 0 4 6c0 .628-.134 2.197-.459 3.742-.16.767-.376 1.566-.663 2.258h10.244c-.287-.692-.502-1.49-.663-2.258C12.134 8.197 12 6.628 12 6a4.002 4.002 0 0 0-3.203-3.92L8 1.917zM14.22 12c.223.447.481.801.78 1H1c.299-.199.557-.553.78-1C2.68 10.2 3 6.88 3 6c0-2.42 1.72-4.44 4.005-4.901a1 1 0 1 1 1.99 0A5.002 5.002 0 0 1 13 6c0 .88.32 4.2 1.22 6z" />
+                                    </svg>
+                                </p>
+                                ব্যাচের ওরিয়েন্টশন: জুন ২৮, ২০২২ (মঙ্গলবার)
+                            </h6>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-6">
+                            <h6 class="fw-bold">
+                                <p class="bg-warning">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="white"
+                                        class="bi bi-bookmark" viewBox="0 0 16 16">
+                                        <path
+                                            d="M2 2a2 2 0 0 1 2-2h8a2 2 0 0 1 2 2v13.5a.5.5 0 0 1-.777.416L8 13.101l-5.223 2.815A.5.5 0 0 1 2 15.5V2zm2-1a1 1 0 0 0-1 1v12.566l4.723-2.482a.5.5 0 0 1 .554 0L13 14.566V2a1 1 0 0 0-1-1H4z" />
+                                    </svg>
+                                </p>
+                                এনরোলমেন্ট শেষ: জুন ২৪, ২০২২ (শুক্রবার)
+                            </h6>
+                        </div>
+                        <div class="col-md-6">
+                            <h6 class="fw-bold">
+                                <p class="bg-danger">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="white"
+                                        class="bi bi-laptop" viewBox="0 0 16 16">
+                                        <path
+                                            d="M13.5 3a.5.5 0 0 1 .5.5V11H2V3.5a.5.5 0 0 1 .5-.5h11zm-11-1A1.5 1.5 0 0 0 1 3.5V12h14V3.5A1.5 1.5 0 0 0 13.5 2h-11zM0 12.5h16a1.5 1.5 0 0 1-1.5 1.5h-13A1.5 1.5 0 0 1 0 12.5z" />
+                                    </svg>
+                                </p>
+                                ক্লাস শুরু: জুন ৩০, ২০২২ (বৃহস্পতিবার)
+                            </h6>
+                        </div>
+                    </div>
+                    <div class="d-flex justify-content-between mt-4 mb-2 regi-btn-grp ps-4 pe-1 rounded-pill">
+                        <h6 class="text-white mb-0 " style="margin-top: 14px;">If you intrested to admit next batch,
+                            Regstration now</h6>
+                        <button class="btn btn-danger rounded-pill px-5">Regstration</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </main>
 
+
+    <!---------- Fontawesome JS ---------->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/js/fontawesome.min.js"
+        crossorigin="anonymous"></script>
     <!---------- Bootstrap JS ---------->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
