Next course sec responsive checked

--- a/index.html
+++ b/index.html
@@ -143,9 +143,9 @@
                         <div class="row">
                             <div class="col-md-7 py-md-4 mb-5 mb-md-0 text-center text-md-start">
                                 <h1 class="text-white pb-2">Lorem ipsum dolor sit amet, consectetur?</h1>
-                                <p class="text-white fs-6 mt-4">Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                                    Distinctio mollitia iure id corporis ad quis sed provident quibusdam hic. Voluptates
-                                    facilis natus cum magni aliquid deleniti est enim consequatur odit!</p>
+                                <p class="text-white fs-6 mt-4">কোর্সের অংশ হিসেবে হাতে কলমে নতুন এগারোটা প্রজেক্ট
+                                    (এসাইনমেন্ট) করবে তুমি। আমরা তোমার প্রজেক্ট এর ফিডব্যাক দিবো। মার্কস দিবো। যাতে
+                                    প্রফেশনাল ওয়েবসাইট বানিয়েই চাকরির ইন্টারভিউতে যেতে পারো।</p>
                                 <button class="btn btn-danger px-5 rounded-pill py-2 mt-4">Enroll Now</button>
                             </div>
                             <div class="col-md-5">
@@ -162,11 +162,11 @@
     <main class="container mb-5">
         <!------Next Batch ------>
         <div class="row">
-            <div class="card shadow rounded-3 nxt-batch col-md-10 offset-md-1 bg-white border-0">
+            <div class="card shadow rounded-3 nxt-batch col-md-10 col-12 offset-md-1 bg-white border-0">
                 <div class="card-body mb-2">
                     <h2 class="text-center py-5 fw-bold">পরবর্তী ব্যাচের সময় সূচি</h2>
                     <div class="row mb-2">
-                        <div class="col-md-6">
+                        <div class="col-md-6 mb-2 mb-md-0">
                             <h6 class="fw-bold">
                                 <p class="bg-primary">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="white"
@@ -194,7 +194,7 @@
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-md-6">
+                        <div class="col-md-6 mb-2 mb-md-0">
                             <h6 class="fw-bold">
                                 <p class="bg-warning">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="white"
