Enroll button edited

--- a/index.html
+++ b/index.html
@@ -118,7 +118,8 @@
                                 <p class="text-white fs-6 mt-4">কোর্সের অংশ হিসেবে হাতে কলমে নতুন এগারোটা প্রজেক্ট
                                     (এসাইনমেন্ট) করবে তুমি। আমরা তোমার প্রজেক্ট এর ফিডব্যাক দিবো। মার্কস দিবো। যাতে
                                     প্রফেশনাল ওয়েবসাইট বানিয়েই চাকরির ইন্টারভিউতে যেতে পারো।</p>
-                                <button class="btn btn-danger px-5 rounded-pill py-2 mt-4">Enroll Now</button>
+                                <button class="btn btn-danger rounded-pill mt-4 enroll-btn enroll-btn">Enroll
+                                    Now</button>
                             </div>
                             <div class="col-md-5">
                                 <img src="./assets/images/s1.png" class="d-block img-fluid" alt="...">
@@ -132,7 +133,7 @@
                                 <p class="text-white fs-6 mt-4">কোর্সের অংশ হিসেবে হাতে কলমে নতুন এগারোটা প্রজেক্ট
                                     (এসাইনমেন্ট) করবে তুমি। আমরা তোমার প্রজেক্ট এর ফিডব্যাক দিবো। মার্কস দিবো। যাতে
                                     প্রফেশনাল ওয়েবসাইট বানিয়েই চাকরির ইন্টারভিউতে যেতে পারো।</p>
-                                <button class="btn btn-danger px-5 rounded-pill py-2 mt-4">Enroll Now</button>
+                                <button class="btn btn-danger rounded-pill mt-4 enroll-btn">Enroll Now</button>
                             </div>
                             <div class="col-md-5">
                                 <img src="./assets/images/s2.png" class="d-block img-fluid" alt="...">
@@ -146,7 +147,7 @@
                                 <p class="text-white fs-6 mt-4">কোর্সের অংশ হিসেবে হাতে কলমে নতুন এগারোটা প্রজেক্ট
                                     (এসাইনমেন্ট) করবে তুমি। আমরা তোমার প্রজেক্ট এর ফিডব্যাক দিবো। মার্কস দিবো। যাতে
                                     প্রফেশনাল ওয়েবসাইট বানিয়েই চাকরির ইন্টারভিউতে যেতে পারো।</p>
-                                <button class="btn btn-danger px-5 rounded-pill py-2 mt-4">Enroll Now</button>
+                                <button class="btn btn-danger rounded-pill mt-4 enroll-btn">Enroll Now</button>
                             </div>
                             <div class="col-md-5">
                                 <img src="./assets/images/s3.png" class="d-block img-fluid" alt="...">
