Course outline section done

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                     <div class="carousel-item active">
                         <div class="row">
                             <div class="col-md-7 py-md-4 mb-5 mb-md-0 text-center text-md-start">
-                                <h1 class="text-white pb-2">Lorem ipsum dolor sit amet, consectetur?</h1>
+                                <h1 class="text-white pb-2">Got stuck? We will always be there for you.</h1>
                                 <p class="text-white fs-6 mt-4">কোর্সের অংশ হিসেবে হাতে কলমে নতুন এগারোটা প্রজেক্ট
                                     (এসাইনমেন্ট) করবে তুমি। আমরা তোমার প্রজেক্ট এর ফিডব্যাক দিবো। মার্কস দিবো। যাতে
                                     প্রফেশনাল ওয়েবসাইট বানিয়েই চাকরির ইন্টারভিউতে যেতে পারো।</p>
@@ -129,7 +129,7 @@
                     <div class="carousel-item">
                         <div class="row">
                             <div class="col-md-7 py-md-4 mb-5 mb-md-0 text-center text-md-start">
-                                <h1 class="text-white pb-2">Lorem ipsum dolor sit amet, consectetur?</h1>
+                                <h1 class="text-white pb-2">Got stuck? We will always be there for you.</h1>
                                 <p class="text-white fs-6 mt-4">কোর্সের অংশ হিসেবে হাতে কলমে নতুন এগারোটা প্রজেক্ট
                                     (এসাইনমেন্ট) করবে তুমি। আমরা তোমার প্রজেক্ট এর ফিডব্যাক দিবো। মার্কস দিবো। যাতে
                                     প্রফেশনাল ওয়েবসাইট বানিয়েই চাকরির ইন্টারভিউতে যেতে পারো।</p>
@@ -223,11 +223,187 @@
                     <div class="d-flex justify-content-between mt-4 mb-2 regi-btn-grp ps-4 pe-1 rounded-pill">
                         <h6 class="text-white mb-0 " style="margin-top: 14px;">If you intrested to admit next batch,
                             Regstration now</h6>
-                        <button class="btn btn-danger rounded-pill px-5">Regstration</button>
+                        <button class="btn btn-danger rounded-pill px-5">Registration</button>
                     </div>
                 </div>
             </div>
         </div>
+
+        <!------ Course Outline ------>
+        <section class="container course-outline">
+            <h2 class="text-center fw-bold mb-5">এই কোর্স থেকে কি কি শিখতে পারবে:</h2>
+            <div class="row">
+                <div class="col-md-5">
+                    <div class="card p-4 border-0 rounded-3 shadow">
+                        <img src="./assets/images/course-banner.png" class="card-img-top" alt="...">
+                        <div class="">
+                            <h5 class="card-title mt-2">
+                                <button class="btn enroll">Enroll Now</button>
+                            </h5>
+                            <ul class="list-unstyled d-flex justify-content-between my-4">
+                                <li class="shadow-sm rounded-pill p-2">
+                                    775 Videos
+                                </li>
+                                <li class="shadow-sm p-2 rounded-pill">
+                                    300 Quizes
+                                </li>
+                                <li class="shadow-sm p-2 rounded-pill">
+                                    12 Assignment
+                                </li>
+                            </ul>
+                            <h3>৳ 5500</h3>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-7">
+                    <div class="row">
+                        <div class="col-md-6 d-inline-flex justify-content-between">
+                            <div class="bg-warning check-icon">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="white"
+                                    class="bi bi-check-lg mb-1" viewBox="0 0 16 16">
+                                    <path
+                                        d="M12.736 3.97a.733.733 0 0 1 1.047 0c.286.289.29.756.01 1.05L7.88 12.01a.733.733 0 0 1-1.065.02L3.217 8.384a.757.757 0 0 1 0-1.06.733.733 0 0 1 1.047 0l3.052 3.093 5.4-6.425a.247.247 0 0 1 .02-.022Z" />
+                                </svg>
+                            </div>
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus fuga, tempore
+                                itaque assumenda repellendus nemo.
+                            </p>
+                        </div>
+                        <div class="col-md-6 d-inline-flex justify-content-between">
+                            <div class="bg-warning check-icon">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="white"
+                                    class="bi bi-check-lg mb-1" viewBox="0 0 16 16">
+                                    <path
+                                        d="M12.736 3.97a.733.733 0 0 1 1.047 0c.286.289.29.756.01 1.05L7.88 12.01a.733.733 0 0 1-1.065.02L3.217 8.384a.757.757 0 0 1 0-1.06.733.733 0 0 1 1.047 0l3.052 3.093 5.4-6.425a.247.247 0 0 1 .02-.022Z" />
+                                </svg>
+                            </div>
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus fuga, tempore
+                                itaque assumenda repellendus nemo.
+                            </p>
+                        </div>
+
+                    </div>
+                    <div class="row">
+                        <div class="col-md-6 d-inline-flex justify-content-between">
+                            <div class="bg-warning check-icon">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="white"
+                                    class="bi bi-check-lg mb-1" viewBox="0 0 16 16">
+                                    <path
+                                        d="M12.736 3.97a.733.733 0 0 1 1.047 0c.286.289.29.756.01 1.05L7.88 12.01a.733.733 0 0 1-1.065.02L3.217 8.384a.757.757 0 0 1 0-1.06.733.733 0 0 1 1.047 0l3.052 3.093 5.4-6.425a.247.247 0 0 1 .02-.022Z" />
+                                </svg>
+                            </div>
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus fuga, tempore
+                                itaque assumenda repellendus nemo.
+                            </p>
+                        </div>
+                        <div class="col-md-6 d-inline-flex justify-content-between">
+                            <div class="bg-warning check-icon">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="white"
+                                    class="bi bi-check-lg mb-1" viewBox="0 0 16 16">
+                                    <path
+                                        d="M12.736 3.97a.733.733 0 0 1 1.047 0c.286.289.29.756.01 1.05L7.88 12.01a.733.733 0 0 1-1.065.02L3.217 8.384a.757.757 0 0 1 0-1.06.733.733 0 0 1 1.047 0l3.052 3.093 5.4-6.425a.247.247 0 0 1 .02-.022Z" />
+                                </svg>
+                            </div>
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus fuga, tempore
+                                itaque assumenda repellendus nemo.
+                            </p>
+                        </div>
+
+                    </div>
+                    <div class="row">
+                        <div class="col-md-6 d-inline-flex justify-content-between">
+                            <div class="bg-warning check-icon">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="white"
+                                    class="bi bi-check-lg mb-1" viewBox="0 0 16 16">
+                                    <path
+                                        d="M12.736 3.97a.733.733 0 0 1 1.047 0c.286.289.29.756.01 1.05L7.88 12.01a.733.733 0 0 1-1.065.02L3.217 8.384a.757.757 0 0 1 0-1.06.733.733 0 0 1 1.047 0l3.052 3.093 5.4-6.425a.247.247 0 0 1 .02-.022Z" />
+                                </svg>
+                            </div>
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus fuga, tempore
+                                itaque assumenda repellendus nemo.
+                            </p>
+                        </div>
+                        <div class="col-md-6 d-inline-flex justify-content-between">
+                            <div class="bg-warning check-icon">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="white"
+                                    class="bi bi-check-lg mb-1" viewBox="0 0 16 16">
+                                    <path
+                                        d="M12.736 3.97a.733.733 0 0 1 1.047 0c.286.289.29.756.01 1.05L7.88 12.01a.733.733 0 0 1-1.065.02L3.217 8.384a.757.757 0 0 1 0-1.06.733.733 0 0 1 1.047 0l3.052 3.093 5.4-6.425a.247.247 0 0 1 .02-.022Z" />
+                                </svg>
+                            </div>
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus fuga, tempore
+                                itaque assumenda repellendus nemo.
+                            </p>
+                        </div>
+
+                    </div>
+                    <div class="row">
+                        <div class="col-md-6 d-inline-flex justify-content-between">
+                            <div class="bg-warning check-icon">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="white"
+                                    class="bi bi-check-lg mb-1" viewBox="0 0 16 16">
+                                    <path
+                                        d="M12.736 3.97a.733.733 0 0 1 1.047 0c.286.289.29.756.01 1.05L7.88 12.01a.733.733 0 0 1-1.065.02L3.217 8.384a.757.757 0 0 1 0-1.06.733.733 0 0 1 1.047 0l3.052 3.093 5.4-6.425a.247.247 0 0 1 .02-.022Z" />
+                                </svg>
+                            </div>
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus fuga, tempore
+                                itaque assumenda repellendus nemo.
+                            </p>
+                        </div>
+                        <div class="col-md-6 d-inline-flex justify-content-between">
+                            <div class="bg-warning check-icon">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="white"
+                                    class="bi bi-check-lg mb-1" viewBox="0 0 16 16">
+                                    <path
+                                        d="M12.736 3.97a.733.733 0 0 1 1.047 0c.286.289.29.756.01 1.05L7.88 12.01a.733.733 0 0 1-1.065.02L3.217 8.384a.757.757 0 0 1 0-1.06.733.733 0 0 1 1.047 0l3.052 3.093 5.4-6.425a.247.247 0 0 1 .02-.022Z" />
+                                </svg>
+                            </div>
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus fuga, tempore
+                                itaque assumenda repellendus nemo.
+                            </p>
+                        </div>
+
+                    </div>
+                    <div class="row">
+                        <div class="col-md-6 d-inline-flex justify-content-between">
+                            <div class="bg-warning check-icon">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="white"
+                                    class="bi bi-check-lg mb-1" viewBox="0 0 16 16">
+                                    <path
+                                        d="M12.736 3.97a.733.733 0 0 1 1.047 0c.286.289.29.756.01 1.05L7.88 12.01a.733.733 0 0 1-1.065.02L3.217 8.384a.757.757 0 0 1 0-1.06.733.733 0 0 1 1.047 0l3.052 3.093 5.4-6.425a.247.247 0 0 1 .02-.022Z" />
+                                </svg>
+                            </div>
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus fuga, tempore
+                                itaque assumenda repellendus nemo.
+                            </p>
+                        </div>
+                        <div class="col-md-6 d-inline-flex justify-content-between">
+                            <div class="bg-warning check-icon">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="white"
+                                    class="bi bi-check-lg mb-1" viewBox="0 0 16 16">
+                                    <path
+                                        d="M12.736 3.97a.733.733 0 0 1 1.047 0c.286.289.29.756.01 1.05L7.88 12.01a.733.733 0 0 1-1.065.02L3.217 8.384a.757.757 0 0 1 0-1.06.733.733 0 0 1 1.047 0l3.052 3.093 5.4-6.425a.247.247 0 0 1 .02-.022Z" />
+                                </svg>
+                            </div>
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus fuga, tempore
+                                itaque assumenda repellendus nemo.
+                            </p>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 
 
