Course outline section done

--- a/index.html
+++ b/index.html
@@ -240,22 +240,16 @@
                             <h5 class="card-title mt-2">
                                 <button class="btn enroll">Enroll Now</button>
                             </h5>
-                            <ul class="list-unstyled d-flex justify-content-between my-4">
-                                <li class="shadow-sm rounded-pill p-2">
-                                    775 Videos
-                                </li>
-                                <li class="shadow-sm p-2 rounded-pill">
-                                    300 Quizes
-                                </li>
-                                <li class="shadow-sm p-2 rounded-pill">
-                                    12 Assignment
-                                </li>
-                            </ul>
-                            <h3>৳ 5500</h3>
+                            <div class="row">
+                                <div class="col-md-4 shadow-sm rounded-pill py-3 px-2">775 Videos</div>
+                                <div class="col-md-4 shadow-sm rounded-pill py-3 px-2">300 Quizes</div>
+                                <div class="col-md-4 shadow-sm rounded-pill py-3 px-2">12 Assignment</div>
+                            </div>
+                            <h3 class="mt-3">৳ 5500</h3>
                         </div>
                     </div>
                 </div>
-                <div class="col-md-7">
+                <div class="col-md-7 mt-5 mt-md-0">
                     <div class="row">
                         <div class="col-md-6 d-inline-flex justify-content-between">
                             <div class="bg-warning check-icon">
