Course speciality sec almost done

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
     <!---------- Main section ---------->
     <main class="container mb-5">
         <!------Next Batch ------>
-        <div class="row">
+        <section class="row">
             <div class="card shadow rounded-3 nxt-batch col-md-10 col-12 offset-md-1 bg-white border-0">
                 <div class="card-body mb-2">
                     <h2 class="text-center py-5 fw-bold">পরবর্তী ব্যাচের সময় সূচি</h2>
@@ -227,11 +227,11 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </section>
 
         <!------ Course Outline ------>
         <section class="container course-outline">
-            <h2 class="text-center fw-bold mb-5">এই কোর্স থেকে কি কি শিখতে পারবে:</h2>
+            <h2 class="text-center fw-bold mb-5 fs-3">এই কোর্স থেকে কি কি শিখতে পারবে:</h2>
             <div class="row">
                 <div class="col-md-5">
                     <div class="card p-4 border-0 rounded-3 shadow">
@@ -240,10 +240,10 @@
                             <h5 class="card-title mt-2">
                                 <button class="btn enroll">Enroll Now</button>
                             </h5>
-                            <div class="row">
-                                <div class="col-md-4 shadow-sm rounded-pill py-3 px-2">775 Videos</div>
-                                <div class="col-md-4 shadow-sm rounded-pill py-3 px-2">300 Quizes</div>
-                                <div class="col-md-4 shadow-sm rounded-pill py-3 px-2">12 Assignment</div>
+                            <div class="row my-4">
+                                <div class="col-md-4 shadow-sm rounded-pill p-2">775 Videos</div>
+                                <div class="col-md-4 shadow-sm rounded-pill p-2">300 Quizes</div>
+                                <div class="col-md-4 shadow-sm rounded-pill p-2">12 Assignment</div>
                             </div>
                             <h3 class="mt-3">৳ 5500</h3>
                         </div>
@@ -252,7 +252,7 @@
                 <div class="col-md-7 mt-5 mt-md-0">
                     <div class="row">
                         <div class="col-md-6 d-inline-flex justify-content-between">
-                            <div class="bg-warning check-icon">
+                            <div class="check-icon">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="white"
                                     class="bi bi-check-lg mb-1" viewBox="0 0 16 16">
                                     <path
@@ -265,7 +265,7 @@
                             </p>
                         </div>
                         <div class="col-md-6 d-inline-flex justify-content-between">
-                            <div class="bg-warning check-icon">
+                            <div class="check-icon">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="white"
                                     class="bi bi-check-lg mb-1" viewBox="0 0 16 16">
                                     <path
@@ -281,7 +281,7 @@
                     </div>
                     <div class="row">
                         <div class="col-md-6 d-inline-flex justify-content-between">
-                            <div class="bg-warning check-icon">
+                            <div class="check-icon">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="white"
                                     class="bi bi-check-lg mb-1" viewBox="0 0 16 16">
                                     <path
@@ -294,7 +294,7 @@
                             </p>
                         </div>
                         <div class="col-md-6 d-inline-flex justify-content-between">
-                            <div class="bg-warning check-icon">
+                            <div class="check-icon">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="white"
                                     class="bi bi-check-lg mb-1" viewBox="0 0 16 16">
                                     <path
@@ -310,7 +310,7 @@
                     </div>
                     <div class="row">
                         <div class="col-md-6 d-inline-flex justify-content-between">
-                            <div class="bg-warning check-icon">
+                            <div class="check-icon">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="white"
                                     class="bi bi-check-lg mb-1" viewBox="0 0 16 16">
                                     <path
@@ -323,7 +323,7 @@
                             </p>
                         </div>
                         <div class="col-md-6 d-inline-flex justify-content-between">
-                            <div class="bg-warning check-icon">
+                            <div class="check-icon">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="white"
                                     class="bi bi-check-lg mb-1" viewBox="0 0 16 16">
                                     <path
@@ -339,7 +339,7 @@
                     </div>
                     <div class="row">
                         <div class="col-md-6 d-inline-flex justify-content-between">
-                            <div class="bg-warning check-icon">
+                            <div class="check-icon">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="white"
                                     class="bi bi-check-lg mb-1" viewBox="0 0 16 16">
                                     <path
@@ -352,7 +352,7 @@
                             </p>
                         </div>
                         <div class="col-md-6 d-inline-flex justify-content-between">
-                            <div class="bg-warning check-icon">
+                            <div class="check-icon">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="white"
                                     class="bi bi-check-lg mb-1" viewBox="0 0 16 16">
                                     <path
@@ -366,9 +366,9 @@
                         </div>
 
                     </div>
-                    <div class="row">
+                    <div class="row mb-5">
                         <div class="col-md-6 d-inline-flex justify-content-between">
-                            <div class="bg-warning check-icon">
+                            <div class="check-icon">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="white"
                                     class="bi bi-check-lg mb-1" viewBox="0 0 16 16">
                                     <path
@@ -381,7 +381,7 @@
                             </p>
                         </div>
                         <div class="col-md-6 d-inline-flex justify-content-between">
-                            <div class="bg-warning check-icon">
+                            <div class="check-icon">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="white"
                                     class="bi bi-check-lg mb-1" viewBox="0 0 16 16">
                                     <path
@@ -395,6 +395,85 @@
                         </div>
 
                     </div>
+
+                    <p class="mt-5">
+                        তবে যারা একটু ফাঁকিবাজ তাদের জন্য দুঃসংবাদ হচ্ছে। প্রত্যেক ভিডিও এর পরে প্রশ্ন থাকছে। প্রত্যেক
+                        মডিউল শেষে ফাইনাল কুইজ আছে। আর প্রত্যেকটা প্রজেক্টের পর একটা করে টেক-এওয়ে হোমওয়ার্ক আছে।
+                    </p>
+                    <p class="mt-1">
+                        এই কোর্স ফলো করে কেউ যদি ওয়েব ডেভেলপার না হতে পারে, দুনিয়ার আর কেউ তাকে ওয়েব ডেভেলপার বানাতে
+                        পারবে না।
+                    </p>
+                </div>
+            </div>
+        </section>
+
+        <!------ Course Speciality ------>
+        <section class="speciality-sec">
+            <div class="speciality-head w-25 text-center mx-auto ">
+                <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="Crimson" class="bi bi-star-fill"
+                    viewBox="0 0 16 16">
+                    <path
+                        d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z" />
+                </svg>
+                <h4 class="mt-3" style="color:Crimson">এই কোর্সের বিশেষত্ব কি?</h4>
+            </div>
+            <div class="row mt-3 gx-5">
+                <div class="col-md-3 card shadow border-0 p-3">
+                    <p class="p-2">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="MidnightBlue"
+                            class="bi bi-pc-display-horizontal" viewBox="0 0 16 16">
+                            <path
+                                d="M1.5 0A1.5 1.5 0 0 0 0 1.5v7A1.5 1.5 0 0 0 1.5 10H6v1H1a1 1 0 0 0-1 1v3a1 1 0 0 0 1 1h14a1 1 0 0 0 1-1v-3a1 1 0 0 0-1-1h-5v-1h4.5A1.5 1.5 0 0 0 16 8.5v-7A1.5 1.5 0 0 0 14.5 0h-13Zm0 1h13a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-.5.5h-13a.5.5 0 0 1-.5-.5v-7a.5.5 0 0 1 .5-.5ZM12 12.5a.5.5 0 1 1 1 0 .5.5 0 0 1-1 0Zm2 0a.5.5 0 1 1 1 0 .5.5 0 0 1-1 0ZM1.5 12h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1 0-1ZM1 14.25a.25.25 0 0 1 .25-.25h5.5a.25.25 0 1 1 0 .5h-5.5a.25.25 0 0 1-.25-.25Z" />
+                        </svg>
+                    </p>
+                    <h5>এইটা কমপ্লিট ওয়েব ডেভেলপমেন্ট এর কোর্স:</h5>
+                    <h6>শূন্য থেকে একজন জুনিয়র ওয়েব ডেভেলপার হিসেবে চাকরি পাওয়ার জন্য যা যা লাগে তার সবকিছুই
+                        ধরে ধরে শিখানো
+                    </h6>
+                    <a href="" class="text-decoration-none text-danger fs-6">আরও দেখুন</a>
+                </div>
+                <div class="col-md-3 card shadow border-0 p-3">
+                    <p class="p-2">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="MidnightBlue"
+                            class="bi bi-pc-display-horizontal" viewBox="0 0 16 16">
+                            <path
+                                d="M1.5 0A1.5 1.5 0 0 0 0 1.5v7A1.5 1.5 0 0 0 1.5 10H6v1H1a1 1 0 0 0-1 1v3a1 1 0 0 0 1 1h14a1 1 0 0 0 1-1v-3a1 1 0 0 0-1-1h-5v-1h4.5A1.5 1.5 0 0 0 16 8.5v-7A1.5 1.5 0 0 0 14.5 0h-13Zm0 1h13a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-.5.5h-13a.5.5 0 0 1-.5-.5v-7a.5.5 0 0 1 .5-.5ZM12 12.5a.5.5 0 1 1 1 0 .5.5 0 0 1-1 0Zm2 0a.5.5 0 1 1 1 0 .5.5 0 0 1-1 0ZM1.5 12h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1 0-1ZM1 14.25a.25.25 0 0 1 .25-.25h5.5a.25.25 0 1 1 0 .5h-5.5a.25.25 0 0 1-.25-.25Z" />
+                        </svg>
+                    </p>
+                    <h5>এইটা কমপ্লিট ওয়েব ডেভেলপমেন্ট এর কোর্স:</h5>
+                    <h6>শূন্য থেকে একজন জুনিয়র ওয়েব ডেভেলপার হিসেবে চাকরি পাওয়ার জন্য যা যা লাগে তার সবকিছুই
+                        ধরে ধরে শিখানো
+                    </h6>
+                    <a href="" class="text-decoration-none text-danger fs-6">আরও দেখুন</a>
+                </div>
+                <div class="col-md-3 card shadow border-0 p-3">
+                    <p class="p-2">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="MidnightBlue"
+                            class="bi bi-pc-display-horizontal" viewBox="0 0 16 16">
+                            <path
+                                d="M1.5 0A1.5 1.5 0 0 0 0 1.5v7A1.5 1.5 0 0 0 1.5 10H6v1H1a1 1 0 0 0-1 1v3a1 1 0 0 0 1 1h14a1 1 0 0 0 1-1v-3a1 1 0 0 0-1-1h-5v-1h4.5A1.5 1.5 0 0 0 16 8.5v-7A1.5 1.5 0 0 0 14.5 0h-13Zm0 1h13a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-.5.5h-13a.5.5 0 0 1-.5-.5v-7a.5.5 0 0 1 .5-.5ZM12 12.5a.5.5 0 1 1 1 0 .5.5 0 0 1-1 0Zm2 0a.5.5 0 1 1 1 0 .5.5 0 0 1-1 0ZM1.5 12h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1 0-1ZM1 14.25a.25.25 0 0 1 .25-.25h5.5a.25.25 0 1 1 0 .5h-5.5a.25.25 0 0 1-.25-.25Z" />
+                        </svg>
+                    </p>
+                    <h5>এইটা কমপ্লিট ওয়েব ডেভেলপমেন্ট এর কোর্স:</h5>
+                    <h6>শূন্য থেকে একজন জুনিয়র ওয়েব ডেভেলপার হিসেবে চাকরি পাওয়ার জন্য যা যা লাগে তার সবকিছুই
+                        ধরে ধরে শিখানো
+                    </h6>
+                    <a href="" class="text-decoration-none text-danger fs-6">আরও দেখুন</a>
+                </div>
+                <div class="col-md-3 card shadow border-0 p-3">
+                    <p class="p-2">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="MidnightBlue"
+                            class="bi bi-pc-display-horizontal" viewBox="0 0 16 16">
+                            <path
+                                d="M1.5 0A1.5 1.5 0 0 0 0 1.5v7A1.5 1.5 0 0 0 1.5 10H6v1H1a1 1 0 0 0-1 1v3a1 1 0 0 0 1 1h14a1 1 0 0 0 1-1v-3a1 1 0 0 0-1-1h-5v-1h4.5A1.5 1.5 0 0 0 16 8.5v-7A1.5 1.5 0 0 0 14.5 0h-13Zm0 1h13a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-.5.5h-13a.5.5 0 0 1-.5-.5v-7a.5.5 0 0 1 .5-.5ZM12 12.5a.5.5 0 1 1 1 0 .5.5 0 0 1-1 0Zm2 0a.5.5 0 1 1 1 0 .5.5 0 0 1-1 0ZM1.5 12h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1 0-1ZM1 14.25a.25.25 0 0 1 .25-.25h5.5a.25.25 0 1 1 0 .5h-5.5a.25.25 0 0 1-.25-.25Z" />
+                        </svg>
+                    </p>
+                    <h5>এইটা কমপ্লিট ওয়েব ডেভেলপমেন্ট এর কোর্স:</h5>
+                    <h6>শূন্য থেকে একজন জুনিয়র ওয়েব ডেভেলপার হিসেবে চাকরি পাওয়ার জন্য যা যা লাগে তার সবকিছুই
+                        ধরে ধরে শিখানো
+                    </h6>
+                    <a href="" class="text-decoration-none text-danger fs-6">আরও দেখুন</a>
                 </div>
             </div>
         </section>
