--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
     </header>
 
     <!---------- Main section ---------->
-    <main class="container mb-5">
+    <main class="mb-5">
         <!------Next Batch ------>
         <section class="row">
             <div class="card shadow rounded-3 nxt-batch col-md-10 col-12 offset-md-1 bg-white border-0">
@@ -222,7 +222,7 @@
                     </div>
                     <div class="d-flex justify-content-between mt-4 mb-2 regi-btn-grp ps-4 pe-1 rounded-pill">
                         <h6 class="text-white mb-0 " style="margin-top: 14px;">If you intrested to admit next batch,
-                            Regstration now</h6>
+                            Registration Now</h6>
                         <button class="btn btn-danger rounded-pill px-5">Registration</button>
                     </div>
                 </div>
@@ -410,70 +410,130 @@
 
         <!------ Course Speciality ------>
         <section class="speciality-sec">
-            <div class="speciality-head w-25 text-center mx-auto ">
-                <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="Crimson" class="bi bi-star-fill"
-                    viewBox="0 0 16 16">
-                    <path
-                        d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z" />
-                </svg>
-                <h4 class="mt-3" style="color:Crimson">এই কোর্সের বিশেষত্ব কি?</h4>
-            </div>
-            <div class="row mt-3 gx-5">
-                <div class="col-md-3 card shadow border-0 p-3">
-                    <p class="p-2">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="MidnightBlue"
-                            class="bi bi-pc-display-horizontal" viewBox="0 0 16 16">
-                            <path
-                                d="M1.5 0A1.5 1.5 0 0 0 0 1.5v7A1.5 1.5 0 0 0 1.5 10H6v1H1a1 1 0 0 0-1 1v3a1 1 0 0 0 1 1h14a1 1 0 0 0 1-1v-3a1 1 0 0 0-1-1h-5v-1h4.5A1.5 1.5 0 0 0 16 8.5v-7A1.5 1.5 0 0 0 14.5 0h-13Zm0 1h13a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-.5.5h-13a.5.5 0 0 1-.5-.5v-7a.5.5 0 0 1 .5-.5ZM12 12.5a.5.5 0 1 1 1 0 .5.5 0 0 1-1 0Zm2 0a.5.5 0 1 1 1 0 .5.5 0 0 1-1 0ZM1.5 12h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1 0-1ZM1 14.25a.25.25 0 0 1 .25-.25h5.5a.25.25 0 1 1 0 .5h-5.5a.25.25 0 0 1-.25-.25Z" />
-                        </svg>
-                    </p>
-                    <h5>এইটা কমপ্লিট ওয়েব ডেভেলপমেন্ট এর কোর্স:</h5>
-                    <h6>শূন্য থেকে একজন জুনিয়র ওয়েব ডেভেলপার হিসেবে চাকরি পাওয়ার জন্য যা যা লাগে তার সবকিছুই
-                        ধরে ধরে শিখানো
-                    </h6>
-                    <a href="" class="text-decoration-none text-danger fs-6">আরও দেখুন</a>
+            <div class="container">
+                <div class="speciality-head shadow px-4 py-3 text-center mx-auto bg-white">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="Crimson"
+                        class="bi bi-star-fill" viewBox="0 0 16 16">
+                        <path
+                            d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z" />
+                    </svg>
+                    <h4 class="mt-3" style="color:Crimson">এই কোর্সের বিশেষত্ব কি?</h4>
                 </div>
-                <div class="col-md-3 card shadow border-0 p-3">
-                    <p class="p-2">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="MidnightBlue"
-                            class="bi bi-pc-display-horizontal" viewBox="0 0 16 16">
-                            <path
-                                d="M1.5 0A1.5 1.5 0 0 0 0 1.5v7A1.5 1.5 0 0 0 1.5 10H6v1H1a1 1 0 0 0-1 1v3a1 1 0 0 0 1 1h14a1 1 0 0 0 1-1v-3a1 1 0 0 0-1-1h-5v-1h4.5A1.5 1.5 0 0 0 16 8.5v-7A1.5 1.5 0 0 0 14.5 0h-13Zm0 1h13a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-.5.5h-13a.5.5 0 0 1-.5-.5v-7a.5.5 0 0 1 .5-.5ZM12 12.5a.5.5 0 1 1 1 0 .5.5 0 0 1-1 0Zm2 0a.5.5 0 1 1 1 0 .5.5 0 0 1-1 0ZM1.5 12h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1 0-1ZM1 14.25a.25.25 0 0 1 .25-.25h5.5a.25.25 0 1 1 0 .5h-5.5a.25.25 0 0 1-.25-.25Z" />
-                        </svg>
-                    </p>
-                    <h5>এইটা কমপ্লিট ওয়েব ডেভেলপমেন্ট এর কোর্স:</h5>
-                    <h6>শূন্য থেকে একজন জুনিয়র ওয়েব ডেভেলপার হিসেবে চাকরি পাওয়ার জন্য যা যা লাগে তার সবকিছুই
-                        ধরে ধরে শিখানো
-                    </h6>
-                    <a href="" class="text-decoration-none text-danger fs-6">আরও দেখুন</a>
+                <div class="row mt-5 gx-5">
+                    <div class="col card border-0 px-3 py-4 me-3">
+                        <p class="p-2">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="MidnightBlue"
+                                class="bi bi-pc-display-horizontal" viewBox="0 0 16 16">
+                                <path
+                                    d="M1.5 0A1.5 1.5 0 0 0 0 1.5v7A1.5 1.5 0 0 0 1.5 10H6v1H1a1 1 0 0 0-1 1v3a1 1 0 0 0 1 1h14a1 1 0 0 0 1-1v-3a1 1 0 0 0-1-1h-5v-1h4.5A1.5 1.5 0 0 0 16 8.5v-7A1.5 1.5 0 0 0 14.5 0h-13Zm0 1h13a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-.5.5h-13a.5.5 0 0 1-.5-.5v-7a.5.5 0 0 1 .5-.5ZM12 12.5a.5.5 0 1 1 1 0 .5.5 0 0 1-1 0Zm2 0a.5.5 0 1 1 1 0 .5.5 0 0 1-1 0ZM1.5 12h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1 0-1ZM1 14.25a.25.25 0 0 1 .25-.25h5.5a.25.25 0 1 1 0 .5h-5.5a.25.25 0 0 1-.25-.25Z" />
+                            </svg>
+                        </p>
+                        <h5>এইটা কমপ্লিট ওয়েব ডেভেলপমেন্ট এর কোর্স:</h5>
+                        <h6>শূন্য থেকে একজন জুনিয়র ওয়েব ডেভেলপার হিসেবে চাকরি পাওয়ার জন্য যা যা লাগে তার সবকিছুই
+                            ধরে ধরে শিখানো
+                        </h6>
+                        <a href="" class="text-decoration-none text-danger fs-6">আরও দেখুন</a>
+                    </div>
+                    <div class="col card border-0 px-3 py-4 me-3">
+                        <p class="p-2">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="MidnightBlue"
+                                class="bi bi-pc-display-horizontal" viewBox="0 0 16 16">
+                                <path
+                                    d="M1.5 0A1.5 1.5 0 0 0 0 1.5v7A1.5 1.5 0 0 0 1.5 10H6v1H1a1 1 0 0 0-1 1v3a1 1 0 0 0 1 1h14a1 1 0 0 0 1-1v-3a1 1 0 0 0-1-1h-5v-1h4.5A1.5 1.5 0 0 0 16 8.5v-7A1.5 1.5 0 0 0 14.5 0h-13Zm0 1h13a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-.5.5h-13a.5.5 0 0 1-.5-.5v-7a.5.5 0 0 1 .5-.5ZM12 12.5a.5.5 0 1 1 1 0 .5.5 0 0 1-1 0Zm2 0a.5.5 0 1 1 1 0 .5.5 0 0 1-1 0ZM1.5 12h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1 0-1ZM1 14.25a.25.25 0 0 1 .25-.25h5.5a.25.25 0 1 1 0 .5h-5.5a.25.25 0 0 1-.25-.25Z" />
+                            </svg>
+                        </p>
+                        <h5>আনলিমিটেড সাপোর্ট:</h5>
+                        <h6>কোর্স চলাকালীন সময়ে ২৪ ঘন্টার মধ্যে তোমার যেকোন প্রশ্নের উত্তর দেয়া হবে (ছুটির দিন বাদে)।
+                            পেঁচগি মার
+                        </h6>
+                        <a href="" class="text-decoration-none text-danger fs-6">আরও দেখুন</a>
+                    </div>
+                    <div class="col card border-0 px-3 py-4 me-3">
+                        <p class="p-2">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="MidnightBlue"
+                                class="bi bi-pc-display-horizontal" viewBox="0 0 16 16">
+                                <path
+                                    d="M1.5 0A1.5 1.5 0 0 0 0 1.5v7A1.5 1.5 0 0 0 1.5 10H6v1H1a1 1 0 0 0-1 1v3a1 1 0 0 0 1 1h14a1 1 0 0 0 1-1v-3a1 1 0 0 0-1-1h-5v-1h4.5A1.5 1.5 0 0 0 16 8.5v-7A1.5 1.5 0 0 0 14.5 0h-13Zm0 1h13a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-.5.5h-13a.5.5 0 0 1-.5-.5v-7a.5.5 0 0 1 .5-.5ZM12 12.5a.5.5 0 1 1 1 0 .5.5 0 0 1-1 0Zm2 0a.5.5 0 1 1 1 0 .5.5 0 0 1-1 0ZM1.5 12h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1 0-1ZM1 14.25a.25.25 0 0 1 .25-.25h5.5a.25.25 0 1 1 0 .5h-5.5a.25.25 0 0 1-.25-.25Z" />
+                            </svg>
+                        </p>
+                        <h5>স্পেশাল ইন্টারভিউ প্রিপারেশন গ্রূপ:</h5>
+                        <h6>যারা ডেইলি ডেইলি কাজ করবে। প্রতিদিন ৬ থেকে ৮ ঘন্টা সময় দিবে। জানপ্রাণ দিয়ে সিরিয়াসভাবে কোর্স
+                            নির্দিষ
+                        </h6>
+                        <a href="" class="text-decoration-none text-danger fs-6">আরও দেখুন</a>
+                    </div>
+                    <div class="col card border-0 px-3 py-4 me-3">
+                        <p class="p-2">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="MidnightBlue"
+                                class="bi bi-pc-display-horizontal" viewBox="0 0 16 16">
+                                <path
+                                    d="M1.5 0A1.5 1.5 0 0 0 0 1.5v7A1.5 1.5 0 0 0 1.5 10H6v1H1a1 1 0 0 0-1 1v3a1 1 0 0 0 1 1h14a1 1 0 0 0 1-1v-3a1 1 0 0 0-1-1h-5v-1h4.5A1.5 1.5 0 0 0 16 8.5v-7A1.5 1.5 0 0 0 14.5 0h-13Zm0 1h13a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-.5.5h-13a.5.5 0 0 1-.5-.5v-7a.5.5 0 0 1 .5-.5ZM12 12.5a.5.5 0 1 1 1 0 .5.5 0 0 1-1 0Zm2 0a.5.5 0 1 1 1 0 .5.5 0 0 1-1 0ZM1.5 12h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1 0-1ZM1 14.25a.25.25 0 0 1 .25-.25h5.5a.25.25 0 1 1 0 .5h-5.5a.25.25 0 0 1-.25-.25Z" />
+                            </svg>
+                        </p>
+                        <h5>জব প্লেসমেন্ট কোচ:</h5>
+                        <h6>যারা SCIC তে সুযোগ পাবে। এবং সেটা ঠিক মতো শেষ করবে আরো ৪ থেকে ৬ সপ্তাহ লেগে থাকবে। তাদের আরো
+                            পার্সোন
+                        </h6>
+                        <a href="" class="text-decoration-none text-danger fs-6">আরও দেখুন</a>
+                    </div>
                 </div>
-                <div class="col-md-3 card shadow border-0 p-3">
-                    <p class="p-2">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="MidnightBlue"
-                            class="bi bi-pc-display-horizontal" viewBox="0 0 16 16">
-                            <path
-                                d="M1.5 0A1.5 1.5 0 0 0 0 1.5v7A1.5 1.5 0 0 0 1.5 10H6v1H1a1 1 0 0 0-1 1v3a1 1 0 0 0 1 1h14a1 1 0 0 0 1-1v-3a1 1 0 0 0-1-1h-5v-1h4.5A1.5 1.5 0 0 0 16 8.5v-7A1.5 1.5 0 0 0 14.5 0h-13Zm0 1h13a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-.5.5h-13a.5.5 0 0 1-.5-.5v-7a.5.5 0 0 1 .5-.5ZM12 12.5a.5.5 0 1 1 1 0 .5.5 0 0 1-1 0Zm2 0a.5.5 0 1 1 1 0 .5.5 0 0 1-1 0ZM1.5 12h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1 0-1ZM1 14.25a.25.25 0 0 1 .25-.25h5.5a.25.25 0 1 1 0 .5h-5.5a.25.25 0 0 1-.25-.25Z" />
-                        </svg>
-                    </p>
-                    <h5>এইটা কমপ্লিট ওয়েব ডেভেলপমেন্ট এর কোর্স:</h5>
-                    <h6>শূন্য থেকে একজন জুনিয়র ওয়েব ডেভেলপার হিসেবে চাকরি পাওয়ার জন্য যা যা লাগে তার সবকিছুই
-                        ধরে ধরে শিখানো
-                    </h6>
-                    <a href="" class="text-decoration-none text-danger fs-6">আরও দেখুন</a>
-                </div>
-                <div class="col-md-3 card shadow border-0 p-3">
-                    <p class="p-2">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="MidnightBlue"
-                            class="bi bi-pc-display-horizontal" viewBox="0 0 16 16">
-                            <path
-                                d="M1.5 0A1.5 1.5 0 0 0 0 1.5v7A1.5 1.5 0 0 0 1.5 10H6v1H1a1 1 0 0 0-1 1v3a1 1 0 0 0 1 1h14a1 1 0 0 0 1-1v-3a1 1 0 0 0-1-1h-5v-1h4.5A1.5 1.5 0 0 0 16 8.5v-7A1.5 1.5 0 0 0 14.5 0h-13Zm0 1h13a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-.5.5h-13a.5.5 0 0 1-.5-.5v-7a.5.5 0 0 1 .5-.5ZM12 12.5a.5.5 0 1 1 1 0 .5.5 0 0 1-1 0Zm2 0a.5.5 0 1 1 1 0 .5.5 0 0 1-1 0ZM1.5 12h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1 0-1ZM1 14.25a.25.25 0 0 1 .25-.25h5.5a.25.25 0 1 1 0 .5h-5.5a.25.25 0 0 1-.25-.25Z" />
-                        </svg>
-                    </p>
-                    <h5>এইটা কমপ্লিট ওয়েব ডেভেলপমেন্ট এর কোর্স:</h5>
-                    <h6>শূন্য থেকে একজন জুনিয়র ওয়েব ডেভেলপার হিসেবে চাকরি পাওয়ার জন্য যা যা লাগে তার সবকিছুই
-                        ধরে ধরে শিখানো
-                    </h6>
-                    <a href="" class="text-decoration-none text-danger fs-6">আরও দেখুন</a>
+                <div class="row mt-5 gx-5">
+                    <div class="col card border-0 px-3 py-4 me-3">
+                        <p class="p-2">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="MidnightBlue"
+                                class="bi bi-pc-display-horizontal" viewBox="0 0 16 16">
+                                <path
+                                    d="M1.5 0A1.5 1.5 0 0 0 0 1.5v7A1.5 1.5 0 0 0 1.5 10H6v1H1a1 1 0 0 0-1 1v3a1 1 0 0 0 1 1h14a1 1 0 0 0 1-1v-3a1 1 0 0 0-1-1h-5v-1h4.5A1.5 1.5 0 0 0 16 8.5v-7A1.5 1.5 0 0 0 14.5 0h-13Zm0 1h13a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-.5.5h-13a.5.5 0 0 1-.5-.5v-7a.5.5 0 0 1 .5-.5ZM12 12.5a.5.5 0 1 1 1 0 .5.5 0 0 1-1 0Zm2 0a.5.5 0 1 1 1 0 .5.5 0 0 1-1 0ZM1.5 12h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1 0-1ZM1 14.25a.25.25 0 0 1 .25-.25h5.5a.25.25 0 1 1 0 .5h-5.5a.25.25 0 0 1-.25-.25Z" />
+                            </svg>
+                        </p>
+                        <h5>এইটা কমপ্লিট ওয়েব ডেভেলপমেন্ট এর কোর্স:</h5>
+                        <h6>শূন্য থেকে একজন জুনিয়র ওয়েব ডেভেলপার হিসেবে চাকরি পাওয়ার জন্য যা যা লাগে তার সবকিছুই
+                            ধরে ধরে শিখানো
+                        </h6>
+                        <a href="" class="text-decoration-none text-danger fs-6">আরও দেখুন</a>
+                    </div>
+                    <div class="col card border-0 px-3 py-4 me-3">
+                        <p class="p-2">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="MidnightBlue"
+                                class="bi bi-pc-display-horizontal" viewBox="0 0 16 16">
+                                <path
+                                    d="M1.5 0A1.5 1.5 0 0 0 0 1.5v7A1.5 1.5 0 0 0 1.5 10H6v1H1a1 1 0 0 0-1 1v3a1 1 0 0 0 1 1h14a1 1 0 0 0 1-1v-3a1 1 0 0 0-1-1h-5v-1h4.5A1.5 1.5 0 0 0 16 8.5v-7A1.5 1.5 0 0 0 14.5 0h-13Zm0 1h13a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-.5.5h-13a.5.5 0 0 1-.5-.5v-7a.5.5 0 0 1 .5-.5ZM12 12.5a.5.5 0 1 1 1 0 .5.5 0 0 1-1 0Zm2 0a.5.5 0 1 1 1 0 .5.5 0 0 1-1 0ZM1.5 12h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1 0-1ZM1 14.25a.25.25 0 0 1 .25-.25h5.5a.25.25 0 1 1 0 .5h-5.5a.25.25 0 0 1-.25-.25Z" />
+                            </svg>
+                        </p>
+                        <h5>আনলিমিটেড সাপোর্ট:</h5>
+                        <h6>কোর্স চলাকালীন সময়ে ২৪ ঘন্টার মধ্যে তোমার যেকোন প্রশ্নের উত্তর দেয়া হবে (ছুটির দিন বাদে)।
+                            পেঁচগি মার
+                        </h6>
+                        <a href="" class="text-decoration-none text-danger fs-6">আরও দেখুন</a>
+                    </div>
+                    <div class="col card border-0 px-3 py-4 me-3">
+                        <p class="p-2">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="MidnightBlue"
+                                class="bi bi-pc-display-horizontal" viewBox="0 0 16 16">
+                                <path
+                                    d="M1.5 0A1.5 1.5 0 0 0 0 1.5v7A1.5 1.5 0 0 0 1.5 10H6v1H1a1 1 0 0 0-1 1v3a1 1 0 0 0 1 1h14a1 1 0 0 0 1-1v-3a1 1 0 0 0-1-1h-5v-1h4.5A1.5 1.5 0 0 0 16 8.5v-7A1.5 1.5 0 0 0 14.5 0h-13Zm0 1h13a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-.5.5h-13a.5.5 0 0 1-.5-.5v-7a.5.5 0 0 1 .5-.5ZM12 12.5a.5.5 0 1 1 1 0 .5.5 0 0 1-1 0Zm2 0a.5.5 0 1 1 1 0 .5.5 0 0 1-1 0ZM1.5 12h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1 0-1ZM1 14.25a.25.25 0 0 1 .25-.25h5.5a.25.25 0 1 1 0 .5h-5.5a.25.25 0 0 1-.25-.25Z" />
+                            </svg>
+                        </p>
+                        <h5>স্পেশাল ইন্টারভিউ প্রিপারেশন গ্রূপ:</h5>
+                        <h6>যারা ডেইলি ডেইলি কাজ করবে। প্রতিদিন ৬ থেকে ৮ ঘন্টা সময় দিবে। জানপ্রাণ দিয়ে সিরিয়াসভাবে কোর্স
+                            নির্দিষ
+                        </h6>
+                        <a href="" class="text-decoration-none text-danger fs-6">আরও দেখুন</a>
+                    </div>
+                    <div class="col card border-0 px-3 py-4 me-3">
+                        <p class="p-2">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="MidnightBlue"
+                                class="bi bi-pc-display-horizontal" viewBox="0 0 16 16">
+                                <path
+                                    d="M1.5 0A1.5 1.5 0 0 0 0 1.5v7A1.5 1.5 0 0 0 1.5 10H6v1H1a1 1 0 0 0-1 1v3a1 1 0 0 0 1 1h14a1 1 0 0 0 1-1v-3a1 1 0 0 0-1-1h-5v-1h4.5A1.5 1.5 0 0 0 16 8.5v-7A1.5 1.5 0 0 0 14.5 0h-13Zm0 1h13a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-.5.5h-13a.5.5 0 0 1-.5-.5v-7a.5.5 0 0 1 .5-.5ZM12 12.5a.5.5 0 1 1 1 0 .5.5 0 0 1-1 0Zm2 0a.5.5 0 1 1 1 0 .5.5 0 0 1-1 0ZM1.5 12h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1 0-1ZM1 14.25a.25.25 0 0 1 .25-.25h5.5a.25.25 0 1 1 0 .5h-5.5a.25.25 0 0 1-.25-.25Z" />
+                            </svg>
+                        </p>
+                        <h5>জব প্লেসমেন্ট কোচ:</h5>
+                        <h6>যারা SCIC তে সুযোগ পাবে। এবং সেটা ঠিক মতো শেষ করবে আরো ৪ থেকে ৬ সপ্তাহ লেগে থাকবে। তাদের আরো
+                            পার্সোন
+                        </h6>
+                        <a href="" class="text-decoration-none text-danger fs-6">আরও দেখুন</a>
+                    </div>
                 </div>
             </div>
         </section>
