--- a/index.html
+++ b/index.html
@@ -420,7 +420,7 @@
                     <h4 class="mt-3" style="color:Crimson">এই কোর্সের বিশেষত্ব কি?</h4>
                 </div>
                 <div class="row mt-5 gx-5">
-                    <div class="col card border-0 px-3 py-4 me-3">
+                    <div class="col-md mb-2 mb-md-0 card border-0 px-4 px-md-3 py-4 me-3">
                         <p class="p-2">
                             <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="MidnightBlue"
                                 class="bi bi-pc-display-horizontal" viewBox="0 0 16 16">
@@ -434,7 +434,7 @@
                         </h6>
                         <a href="" class="text-decoration-none text-danger fs-6">আরও দেখুন</a>
                     </div>
-                    <div class="col card border-0 px-3 py-4 me-3">
+                    <div class="col-md mb-2 mb-md-0 card border-0 px-4 px-md-3 py-4 me-3">
                         <p class="p-2">
                             <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="MidnightBlue"
                                 class="bi bi-pc-display-horizontal" viewBox="0 0 16 16">
@@ -448,7 +448,7 @@
                         </h6>
                         <a href="" class="text-decoration-none text-danger fs-6">আরও দেখুন</a>
                     </div>
-                    <div class="col card border-0 px-3 py-4 me-3">
+                    <div class="col-md mb-2 mb-md-0 card border-0 px-4 px-md-3 py-4 me-3">
                         <p class="p-2">
                             <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="MidnightBlue"
                                 class="bi bi-pc-display-horizontal" viewBox="0 0 16 16">
@@ -462,7 +462,7 @@
                         </h6>
                         <a href="" class="text-decoration-none text-danger fs-6">আরও দেখুন</a>
                     </div>
-                    <div class="col card border-0 px-3 py-4 me-3">
+                    <div class="col-md mb-2 mb-md-0 card border-0 px-4 px-md-3 py-4 me-3">
                         <p class="p-2">
                             <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="MidnightBlue"
                                 class="bi bi-pc-display-horizontal" viewBox="0 0 16 16">
@@ -477,8 +477,8 @@
                         <a href="" class="text-decoration-none text-danger fs-6">আরও দেখুন</a>
                     </div>
                 </div>
-                <div class="row mt-5 gx-5">
-                    <div class="col card border-0 px-3 py-4 me-3">
+                <div class="row mt-1 mt-md-4 gx-5">
+                    <div class="col-md mb-2 mb-md-0 card border-0 px-4 px-md-3 py-4 me-3">
                         <p class="p-2">
                             <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="MidnightBlue"
                                 class="bi bi-pc-display-horizontal" viewBox="0 0 16 16">
@@ -492,7 +492,7 @@
                         </h6>
                         <a href="" class="text-decoration-none text-danger fs-6">আরও দেখুন</a>
                     </div>
-                    <div class="col card border-0 px-3 py-4 me-3">
+                    <div class="col-md mb-2 mb-md-0 card border-0 px-4 px-md-3 py-4 me-3">
                         <p class="p-2">
                             <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="MidnightBlue"
                                 class="bi bi-pc-display-horizontal" viewBox="0 0 16 16">
@@ -506,7 +506,7 @@
                         </h6>
                         <a href="" class="text-decoration-none text-danger fs-6">আরও দেখুন</a>
                     </div>
-                    <div class="col card border-0 px-3 py-4 me-3">
+                    <div class="col-md mb-2 mb-md-0 card border-0 px-4 px-md-3 py-4 me-3">
                         <p class="p-2">
                             <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="MidnightBlue"
                                 class="bi bi-pc-display-horizontal" viewBox="0 0 16 16">
@@ -520,7 +520,7 @@
                         </h6>
                         <a href="" class="text-decoration-none text-danger fs-6">আরও দেখুন</a>
                     </div>
-                    <div class="col card border-0 px-3 py-4 me-3">
+                    <div class="col-md mb-2 mb-md-0 card border-0 px-4 px-md-3 py-4 me-3">
                         <p class="p-2">
                             <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="MidnightBlue"
                                 class="bi bi-pc-display-horizontal" viewBox="0 0 16 16">
